--- a/ansible/roles/k3s/tasks/k3s.yml
+++ b/ansible/roles/k3s/tasks/k3s.yml
@@ -49,7 +49,13 @@
         --etcd-expose-metrics \
         --tls-san {{ _k3s_san_comma_list }} \
         --disable-cloud-controller \
-        --token {{ k3s_token }}
+        --token {{ k3s_token }} \
+        --kubelet-arg "node-status-update-frequency=4s" \
+        --kube-controller-manager-arg "node-monitor-period=4s" \
+        --kube-controller-manager-arg "node-monitor-grace-period=16s" \
+        --kube-controller-manager-arg "pod-eviction-timeout=10s" \
+        --kube-apiserver-arg "default-not-ready-toleration-seconds=10" \
+        --kube-apiserver-arg "default-unreachable-toleration-seconds=10"
   when: first_k3s_master_node == inventory_hostname
 
 - name: Wait for initial k3s up
@@ -72,19 +78,32 @@
         --etcd-expose-metrics \
         --tls-san {{ _k3s_san_comma_list }} \
         --disable-cloud-controller \
-        --token {{ k3s_token }}
+        --token {{ k3s_token }} \
+
+        '--kubelet-arg' \
+        'node-status-update-frequency=4s' \
+        '--kube-controller-manager-arg' \
+        'node-monitor-period=4s' \
+        '--kube-controller-manager-arg' \
+        'node-monitor-grace-period=16s' \
+        '--kube-controller-manager-arg' \
+        'pod-eviction-timeout=10s' \
+        '--kube-apiserver-arg' \
+        'default-not-ready-toleration-seconds=10' \
+        '--kube-apiserver-arg' \
+        'default-unreachable-toleration-seconds=10' \
   when: first_k3s_master_node != inventory_hostname and inventory_hostname in k8s_master_nodes
 
-- name: "Setup k8s worker nodes"
-  ansible.builtin.shell:
-    creates: /etc/rancher/k3s/k3s.yaml
-    executable: /bin/bash
-    cmd: |
-      /root/install.sh agent \
-        --server https://{{ _initial_master_k3s_node_ip }}:6443 \
-        --token {{ k3s_token }}
-        --node-ip {{ hostvars[inventory_hostname][_ansible_k3s_worker_node_interface]['ipv4']['address'] }} \
-  when: inventory_hostname in k8s_worker_nodes
+# - name: "Setup k8s worker nodes"
+#   ansible.builtin.shell:
+#     creates: /etc/rancher/k3s/k3s.yaml
+#     executable: /bin/bash
+#     cmd: |
+#       /root/install.sh agent \
+#         --server https://{{ _initial_master_k3s_node_ip }}:6443 \
+#         --token {{ k3s_token }}
+#         --node-ip {{ hostvars[inventory_hostname][_ansible_k3s_worker_node_interface]['ipv4']['address'] }} \
+#   when: inventory_hostname in k8s_worker_nodes
 
 - name: Ensure k3s service is enabled
   ansible.builtin.service:
