--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -25,9 +25,9 @@
         name: k3s
       # when: inventory_hostname in k8s_master_nodes
       
-    - name: Install OpenVPN Server
-      ansible.builtin.include_role:
-        name: openvpn
+    # - name: Install OpenVPN Server
+    #   ansible.builtin.include_role:
+    #     name: openvpn
       
     # - name: Install Loadbalancer
     #   ansible.builtin.include_role:
