--- a/helmfiles/monitoring/values/prometheus/common.yaml
+++ b/helmfiles/monitoring/values/prometheus/common.yaml
@@ -38,6 +38,8 @@ prometheusOperator:
       memory: 200Mi
 
 grafana:
+  deploymentStrategy:
+    type: Recreate
   securityContext:
     fsGroup: 1000
     runAsGroup: 1000
@@ -95,7 +97,7 @@ grafana:
       oauth_auto_login: true
     "auth.generic_oauth":
       enabled: true
-      scopes: profile,email,groups
+      scopes: profile,email,groups,openid
       name: Keycloak
       allow_sign_up: false
       auth_url: https://auth.szymonrichert.pl/realms/Lab/protocol/openid-connect/auth
