--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -20,16 +20,16 @@
     #     name: consul
     #   when: inventory_hostname in k8s_master_nodes
       
-    - name: Install kubernetes
+    # - name: Install kubernetes
+    #   ansible.builtin.include_role:
+    #     name: k3s
+    #   when: inventory_hostname in k8s_master_nodes
+      
+    - name: Install OpenVPN Server
       ansible.builtin.include_role:
-        name: k3s
-      # when: inventory_hostname in k8s_master_nodes
+        name: openvpn
       
-    # - name: Install OpenVPN Server
-    #   ansible.builtin.include_role:
-    #     name: openvpn
-      
-    # - name: Install Loadbalancer
-    #   ansible.builtin.include_role:
-    #     name: nginx
-    #   when: vpn_master_hostname == inventory_hostname
+    - name: Install Loadbalancer
+      ansible.builtin.include_role:
+        name: nginx
+      when: vpn_master_hostname == inventory_hostname
