--- a/helmfiles/backbone/values/ingress-nginx/common.yaml
+++ b/helmfiles/backbone/values/ingress-nginx/common.yaml
@@ -7,6 +7,10 @@ controller:
 
   replicaCount: 1
 
+  resources:
+    requests:
+      cpu: 10m
+      memory: 128Mi
 
   affinity:
     nodeAffinity:
