Update grafana for new keycloak DB

--- a/helmfiles/authentication/values/keycloak/common.yaml
+++ b/helmfiles/authentication/values/keycloak/common.yaml
@@ -65,92 +65,103 @@ metrics:
   prometheusRule:
     enabled: true
 
+externalDatabase:
+  host: keycloak-postgresql
+  port: 5432
+  user: keycloak
+  database: keycloak
+  existingSecret: keycloak.keycloak-postgresql.credentials.postgresql.acid.zalan.do
+  existingSecretPasswordKey: password
+
 postgresql:
-  enabled: true
-  auth:
-    username: bn_keycloak
-    database: bitnami_keycloak
-  architecture: replication # standalone
-  primary:
-    podSecurityContext:
-      enabled: true
-      fsGroup: 1000
-    containerSecurityContext:
-      enabled: true
-      runAsUser: 1000
-      runAsNonRoot: true
-    podLabels:
-      application: postgresql-primary
-    persistence:
-      enabled: true
-      storageClass: local-path
-    affinity:
-      nodeAffinity:
-        requiredDuringSchedulingIgnoredDuringExecution:
-          nodeSelectorTerms:
-          - matchExpressions:
-            - key: "kubernetes.io/hostname"
-              operator: In
-              values:
-                - nuc1
-                - nuc2
-                - nuc3
-      podAntiAffinity:
-        requiredDuringSchedulingIgnoredDuringExecution:
-        - labelSelector:
-            matchExpressions:
-            - key: application
-              operator: In
-              values:
-              - postgresql-primary
-          topologyKey: "kubernetes.io/hostname"
-    resources:
-      requests:
-        memory: 64Mi
-        cpu: 10m
-      limits:
-        memory: 512Mi
-        cpu: 500m
-  readReplicas:
-    replicaCount: 3
-    podSecurityContext:
-      enabled: true
-      fsGroup: 1000
-    containerSecurityContext:
-      enabled: true
-      runAsUser: 1000
-      runAsNonRoot: true
-    podLabels:
-      application: postgresql-readonly
-    persistence:
-      enabled: true
-      storageClass: local-path
-    affinity:
-      nodeAffinity:
-        requiredDuringSchedulingIgnoredDuringExecution:
-          nodeSelectorTerms:
-          - matchExpressions:
-            - key: "kubernetes.io/hostname"
-              operator: In
-              values:
-                - nuc1
-                - nuc2
-                - nuc3
-      podAntiAffinity:
-        requiredDuringSchedulingIgnoredDuringExecution:
-        - labelSelector:
-            matchExpressions:
-            - key: application
-              operator: In
-              values:
-              - postgresql-readonly
-          topologyKey: "kubernetes.io/hostname"
-    resources:
-      requests:
-        memory: 64Mi
-        cpu: 10m
-      limits:
-        memory: 512Mi
-        cpu: 500m
+  enabled: false
+
+# postgresql:
+#   enabled: true
+#   auth:
+#     username: bn_keycloak
+#     database: bitnami_keycloak
+#   architecture: replication # standalone
+#   primary:
+#     podSecurityContext:
+#       enabled: true
+#       fsGroup: 1000
+#     containerSecurityContext:
+#       enabled: true
+#       runAsUser: 1000
+#       runAsNonRoot: true
+#     podLabels:
+#       application: postgresql-primary
+#     persistence:
+#       enabled: true
+#       storageClass: local-path
+#     affinity:
+#       nodeAffinity:
+#         requiredDuringSchedulingIgnoredDuringExecution:
+#           nodeSelectorTerms:
+#           - matchExpressions:
+#             - key: "kubernetes.io/hostname"
+#               operator: In
+#               values:
+#                 - nuc1
+#                 - nuc2
+#                 - nuc3
+#       podAntiAffinity:
+#         requiredDuringSchedulingIgnoredDuringExecution:
+#         - labelSelector:
+#             matchExpressions:
+#             - key: application
+#               operator: In
+#               values:
+#               - postgresql-primary
+#           topologyKey: "kubernetes.io/hostname"
+#     resources:
+#       requests:
+#         memory: 64Mi
+#         cpu: 10m
+#       limits:
+#         memory: 512Mi
+#         cpu: 500m
+#   readReplicas:
+#     replicaCount: 3
+#     podSecurityContext:
+#       enabled: true
+#       fsGroup: 1000
+#     containerSecurityContext:
+#       enabled: true
+#       runAsUser: 1000
+#       runAsNonRoot: true
+#     podLabels:
+#       application: postgresql-readonly
+#     persistence:
+#       enabled: true
+#       storageClass: local-path
+#     affinity:
+#       nodeAffinity:
+#         requiredDuringSchedulingIgnoredDuringExecution:
+#           nodeSelectorTerms:
+#           - matchExpressions:
+#             - key: "kubernetes.io/hostname"
+#               operator: In
+#               values:
+#                 - nuc1
+#                 - nuc2
+#                 - nuc3
+#       podAntiAffinity:
+#         requiredDuringSchedulingIgnoredDuringExecution:
+#         - labelSelector:
+#             matchExpressions:
+#             - key: application
+#               operator: In
+#               values:
+#               - postgresql-readonly
+#           topologyKey: "kubernetes.io/hostname"
+#     resources:
+#       requests:
+#         memory: 64Mi
+#         cpu: 10m
+#       limits:
+#         memory: 512Mi
+#         cpu: 500m
 cache:
   enabled: true
