Enable Loki, various tweaks

--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -6,7 +6,7 @@ helmfiles:
 # - path: helmfiles/datascience/helmfile.yaml
 # - path: helmfiles/coding/helmfile.yaml
 - path: helmfiles/home-automation/helmfile.yaml
-# - path: helmfiles/media/helmfile.yaml
+- path: helmfiles/media/helmfile.yaml
 # - path: helmfiles/blog/helmfile.yaml
 
 environments:
