Ensure rook-ceph FS redundancy

--- a/helmfiles/backbone/values/rook-ceph-cluster/common.yaml
+++ b/helmfiles/backbone/values/rook-ceph-cluster/common.yaml
@@ -177,9 +177,14 @@ cephFileSystems:
         replicated:
           size: 3
       dataPools:
-        - failureDomain: host
+        - name: replicated
+          failureDomain: host
           replicated:
             size: 3
+            requireSafeReplicaSize: true
+          parameters:
+            compression_mode:
+              none
       metadataServer:
         activeCount: 1
         activeStandby: true
