--- a/helmfiles/media/values/jellyfin/common.yaml
+++ b/helmfiles/media/values/jellyfin/common.yaml
@@ -1,19 +1,18 @@
 ingress:
-  main:
-    enabled: true
-    ingressClassName: "nginx"
-    annotations:
-      cert-manager.io/cluster-issuer: letsencrypt-prod
-      kubernetes.io/tls-acme: "true"
-    hosts:
-      - host: jellyfin.szymonrichert.pl
-        paths:
-          - path: /
-            pathType: Prefix
-    tls:
-      - secretName: jellyfin-tls
-        hosts:
-          - jellyfin.szymonrichert.pl
+  enabled: true
+  className: "nginx"
+  annotations:
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+    kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: jellyfin.szymonrichert.pl
+      paths:
+        - path: /
+          pathType: Prefix
+  tls:
+    - secretName: jellyfin-tls
+      hosts:
+        - jellyfin.szymonrichert.pl
 
 affinity:
   nodeAffinity:
