Disable readinessProbe for postgresql-operator

--- a/helmfiles/backbone/values/postgres-operator/common.yaml
+++ b/helmfiles/backbone/values/postgres-operator/common.yaml
@@ -1,6 +1,8 @@
 image:
   tag: v1.8.2-43-g3e148ea5
 
+readinessProbe: false
+
 configKubernetes:
   enable_pod_antiaffinity: true
   enable_readiness_probe: true
