--- a/helmfiles/backbone/helmfile.yaml
+++ b/helmfiles/backbone/helmfile.yaml
@@ -47,10 +47,21 @@ templates:
     <<: *default
 releases:
 
+- name: samba
+  chart: szymonrychu/samba
+  version: 0.1.3
+  namespace: samba
+  labels:
+    purpose: backbone
+    application: samba
+  <<: *default
+
 - name: csi-driver-smb
   chart: csi-driver-smb/csi-driver-smb
   version: 1.9.0
   namespace: kube-system
+  needs:
+  - samba/samba
   labels:
     purpose: backbone
     application: smb-csi-driver
